--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "irb_image_focus",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Select image and set focus",
   "main": "dist/irb_image_focus.cjs.js",
   "module": "dist/irb_image_focus.esm.js",
@@ -11,7 +11,11 @@
     "test": "node test/spec",
     "pretest": "npm run build"
   },
-  "keywords": ["js", "image", "focus"],
+  "keywords": [
+    "js",
+    "image",
+    "focus"
+  ],
   "author": "Ruslan Ismailov",
   "license": "MIT",
   "devDependencies": {
